Fix visible outline when opening alertify modal on chromium

--- a/customize.dist/src/less2/include/alertify.less
+++ b/customize.dist/src/less2/include/alertify.less
@@ -58,6 +58,7 @@
         width: 100%;
         height: 100%;
         z-index: 100000; // alertify container
+        outline: none;
         font: @colortheme_app-font;
 
         .cp-checkmark {
